--- a/src/main/resources/assets/fpsmatch/lang/en_us.json
+++ b/src/main/resources/assets/fpsmatch/lang/en_us.json
@@ -12,5 +12,7 @@
   "commands.fpsm.modify.spawn.add.success": "Spawn point added for team %1$s.",
   "commands.fpsm.modify.spawn.clear.success": "Spawn points cleared for team %1$s.",
   "commands.fpsm.modify.spawn.clearall.success": "All spawn points cleared.",
-  "commands.fpsm.modify.spawn.invalidAction": "Specified an invalid spawn point action."
+  "commands.fpsm.modify.spawn.invalidAction": "Specified an invalid spawn point action.",
+  "fpsm.shop.title.cooldown": "Remaining purchase time %1$s",
+  "fpsm.shop.title.min.money": "Minimum amount for next round %1$s"
 }
