--- a/src/main/resources/assets/fpsmatch/lang/zh_cn.json
+++ b/src/main/resources/assets/fpsmatch/lang/zh_cn.json
@@ -1,16 +1,30 @@
 {
-  "commands.fpsm.debug.start.success": "地图 '%1$s' 的游戏已启动。",
-  "commands.fpsm.debug.reset.success": "地图 '%1$s' 的游戏已重置。",
-  "commands.fpsm.debug.newround.success": "地图 '%1$s' 的新回合已开始。",
-  "commands.fpsm.debug.cleanup.success": "地图 '%1$s' 已清理。",
-  "commands.fpsm.create.success": "地图 '%1$s' 创建成功。",
-  "commands.fpsm.team.join.success": "%1$s 加入了团队 %2$s。",
-  "commands.fpsm.team.leave.success": "%1$s 离开了团队。",
-  "commands.fpsm.team.invalidAction": "指定了无效的团队操作。",
-  "commands.fpsm.team.notFound": "未找到团队。",
-  "commands.fpsm.map.notFound": "未找到地图。",
-  "commands.fpsm.modify.spawn.add.success": "为团队 %1$s 添加了出生点。",
-  "commands.fpsm.modify.spawn.clear.success": "清除了团队 %1$s 的出生点。",
+  "commands.fpsm.debug.start.success": "地图“%1$s”的游戏已开始。",
+  "commands.fpsm.debug.reset.success": "地图“%1$s”的游戏已重置。",
+  "commands.fpsm.debug.newround.success": "地图“%1$s”开始了新的一轮。",
+  "commands.fpsm.debug.cleanup.success": "地图“%1$s”已被清理。",
+  "commands.fpsm.create.success": "地图“%1$s”创建成功。",
+  "commands.fpsm.team.join.success": "%1$s 加入了 %2$s 队伍。",
+  "commands.fpsm.team.join.failure": "%1$s 队伍已满。",
+  "commands.fpsm.team.leave.success": "%1$s 离开了队伍。",
+  "commands.fpsm.team.invalidAction": "指定了无效的队伍操作。",
+  "commands.fpsm.team.notFound": "队伍未找到。",
+  "commands.fpsm.map.notFound": "地图未找到。",
+  "commands.fpsm.modify.spawn.add.success": "为 %1$s 队伍添加了出生点。",
+  "commands.fpsm.modify.spawn.clear.success": "清除了 %1$s 队伍的所有出生点。",
   "commands.fpsm.modify.spawn.clearall.success": "清除了所有出生点。",
-  "commands.fpsm.modify.spawn.invalidAction": "指定了无效的出生点操作。"
+  "commands.fpsm.modify.spawn.invalidAction": "指定了无效的出生点操作。",
+  "fpsm.shop.title.cooldown": "剩余购买时间 %1$s",
+  "fpsm.shop.title.min.money": "下一轮的最低金额 %1$s",
+  "key.fpsm.open.shop.desc": "打开枪械商店",
+  "key.category.fpsm": "FPSMacth",
+  "key.fpsm.open.shop.failed.no_map": "因为没有加入任何地图，所以无法打开商店",
+  "key.fpsm.open.shop.failed.game.not_started": "因为游戏未开始，所以无法打开商店",
+  "key.fpsm.open.shop.failed.purchase_time.expired": "因为购买时间已过期，所以无法打开商店",
+  "key.fpsm.open.shop.failed.left.purchase_area": "因为离开了购买区域，所以无法打开商店",
+  "key.fpsm.open.shop.failed.game_type.no_shop": "因为加入的游戏不支持商店，所以无法打开商店",
+  "key.fpsm.dismantle_bomb.desc": "拆除炸弹",
+  "commands.fpsm.team.leave.failure": "队伍未找到",
+  "commands.fpsm.shop.modify.success": "成功修改了“%1$s”商店的第%3$d个类型为%2$d的商品槽，商品为“%4$s”，价格为%5$d。",
+  "commands.fpsm.shop.modify.failed": "修改商店失败。请检查您的权限或商店是否存在。"
 }
