--- a/src/main/resources/assets/fpsmatch/lang/en_us.json
+++ b/src/main/resources/assets/fpsmatch/lang/en_us.json
@@ -34,6 +34,7 @@
   "commands.fpsm.modify.kits.list.success": "Start kits list for team '%1$s': %2$d items.",
   "key.fpsm.custom.tab.on": "Custom Tab On",
   "key.fpsm.custom.tab.off": "Custom Tab Off",
-  "key.fpsm.custom.tab.desc": "Switch Custom Tab"
+  "key.fpsm.custom.tab.desc": "Switch Custom Tab",
+  "commands.fpsm.save.success": "Saved successfully."
 
 }
