--- a/src/main/resources/assets/fpsmatch/lang/zh_cn.json
+++ b/src/main/resources/assets/fpsmatch/lang/zh_cn.json
@@ -37,14 +37,16 @@
   "key.fpsm.custom.tab.off": "自定义Tab 关闭",
   "key.fpsm.custom.tab.desc": "切换自定义Tab",
   "commands.fpsm.save.success": "保存成功。",
-  "fpsm.map.cs.winner.ct.message" : "CT 阵营胜利",
-  "fpsm.map.cs.winner.t.message" : "T 阵营胜利",
-  "fpsm.map.cs.winner.ct.round.message" : "CT 回合胜利",
-  "fpsm.map.cs.winner.t.round.message" : "T 回合胜利",
+  "fpsm.map.cs.winner.ct.message" : "CT 阵营游戏胜利",
+  "fpsm.map.cs.winner.t.message" : "T 阵营游戏胜利",
+  "fpsm.map.cs.winner.ct.round.message" : "CT 阵营回合胜利",
+  "fpsm.map.cs.winner.t.round.message" : "T 阵营回合胜利",
   "fpsm.death.message": "%1$s 使用 %3$s 击杀 %2$s",
   "fpsm.death.message.headshot": "%1$s 使用 %3$s 爆头击杀 %2$s",
   "fpsm.kill.message.teammate" : "击杀队友减少 %1$s 货币",
   "fpsm.kill.message.enemy" : "击杀敌人奖励 %1$s 货币",
+  "fpsm.screen.scale.warm" : "使用FPSMatch模组的商店前请检查 设置->视频设置->界面尺寸是否为1~4之间，不能为自动。",
+  "fpsm.screen.scale.warm.tips" : "如果打开商店仍然显示异常可以尝试调整我的世界窗口大小，并重新打开商店即可，后续可以恢复全屏或者其他尺寸。",
 
   "item.fpsmatch.c4": "C4"
 }
