--- a/src/main/resources/assets/fpsmatch/lang/zh_cn.json
+++ b/src/main/resources/assets/fpsmatch/lang/zh_cn.json
@@ -45,8 +45,25 @@
   "fpsm.death.message.headshot": "%1$s 使用 %3$s 爆头击杀 %2$s",
   "fpsm.kill.message.teammate" : "击杀队友减少 %1$s 货币",
   "fpsm.kill.message.enemy" : "击杀敌人奖励 %1$s 货币",
-  "fpsm.screen.scale.warm" : "使用FPSMatch模组的商店前请检查 设置->视频设置->界面尺寸是否为1~4之间，不能为自动。",
-  "fpsm.screen.scale.warm.tips" : "如果打开商店仍然显示异常可以尝试调整我的世界窗口大小，并重新打开商店即可，后续可以恢复全屏或者其他尺寸。",
-
+  "fpsm.screen.scale.warm" : "使用FPSMatch模组的商店前请检查 \n 设置->视频设置->界面尺寸是否为1~4之间，不能为自动。",
+  "fpsm.screen.scale.warm.tips" : "如果打开商店仍然显示异常可以尝试调整我的世界窗口大小，\n 并重新打开商店即可，后续可以恢复全屏或者其他尺寸。",
+  "fpsm.map.cs.team.switch" : "攻防转换",
+  "fpsm.item.c4.use.fail.notInArea": "你不在指定爆破区域内！",
+  "fpsm.item.c4.use.fail": "你不能放置炸弹！",
+  "fpsm.item.c4.use.fail.noArea": "未定义爆破区域！",
+  "fpsm.item.c4.use.fail.noMap": "你不能放置炸弹，因为你还没有加入爆破模式地图！",
+  "fpsm.item.c4.use.fail.map.notStart": "你不能放置炸弹，因为游戏尚未开始！",
+  "fpsm.item.c4.use.fail.team.notInTeam": "你不能放置炸弹，因为你还没有加入队伍！",
+  "fpsm.login.message.closeable" : "上述信息可在FPSMatch Config中关闭。",
+  "commands.fpsm.sync.success": "同步操作成功完成。",
+  "commands.fpsm.shop.slot.modify.group.success": "成功修改了商店类型%1$s的第%2$d个插槽的组ID为%3$d。",
+  "commands.fpsm.shop.slot.modify.group.fail": "修改地图%1$s的组ID失败。",
+  "commands.fpsm.shop.slot.listener.remove.success": "成功移除了监听模块%1$s。",
+  "commands.fpsm.shop.slot.listener.remove.fail": "移除监听模块%1$s失败。",
+  "commands.fpsm.listener.add.success": "成功添加了监听模块%1$s。",
+  "commands.fpsm.listener.add.fail": "添加监听模块%1$s失败。",
+  "commands.fpsm.reload.success": "重载操作成功完成。",
+  "commands.fpsm.shop.modify.gun.success": "成功修改了%1$s商店的第%2$d个插槽，添加了'%3$s'，带有%4$d发虚拟弹药。",
+  "commands.fpsm.shop.modify.gun.failed": "商店中的枪支修改失败。请检查商店数据。",
   "item.fpsmatch.c4": "C4"
 }
