--- a/src/main/resources/assets/fpsmatch/lang/zh_cn.json
+++ b/src/main/resources/assets/fpsmatch/lang/zh_cn.json
@@ -65,5 +65,13 @@
   "commands.fpsm.reload.success": "重载操作成功完成。",
   "commands.fpsm.shop.modify.gun.success": "成功修改了%1$s商店的第%2$d个插槽，添加了'%3$s'，带有%4$d发虚拟弹药。",
   "commands.fpsm.shop.modify.gun.failed": "商店中的枪支修改失败。请检查商店数据。",
-  "item.fpsmatch.c4": "C4"
+  "item.fpsmatch.c4": "C4",
+  "item.fpsmatch.smoke_shell" : "烟雾弹",
+  "fpsm.map.cs.wip.fail" : "这个功能尚未实现，请等待后续版本更新！",
+  "fpsm.map.cs.pause.fail" : "游戏尚未开始，或已用尽暂停次数，或已处于暂停状态！",
+  "fpsm.map.cs.pause.nextRound.success" : "暂停将于下一回合生效！",
+  "fpsm.map.cs.pause.success" : "当前游戏被设置为暂停状态。",
+  "fpsm.item.c4.dismantled" : "炸弹已经被拆除。",
+  "fpsm.item.c4.planted" : "炸弹已安放。"
+
 }
