--- a/src/main/resources/assets/fpsmatch/lang/en_us.json
+++ b/src/main/resources/assets/fpsmatch/lang/en_us.json
@@ -72,6 +72,7 @@
   "fpsm.map.cs.pause.nextRound.success" : "The pause status will take effect in the next round!",
   "fpsm.map.cs.pause.success" : "The current game is set to pause state",
   "fpsm.map.cs.pause.now" : "The current game is pause state",
+  "fpsm.map.cs.pause.done" : "The pause time has been exhausted",
   "fpsm.item.c4.dismantled" : "The bomb has been dismantled",
   "fpsm.item.c4.planted" : "The bomb has been planted"
 }
