--- a/src/main/resources/assets/fpsmatch/lang/en_us.json
+++ b/src/main/resources/assets/fpsmatch/lang/en_us.json
@@ -35,6 +35,8 @@
   "commands.fpsm.modify.kits.clear.failed": "Failed to clear start kits for team '%1$s'.",
   "commands.fpsm.modify.kits.invalidAction": "Invalid action.",
   "commands.fpsm.modify.kits.list.success": "Start kits list for team '%1$s': %2$d items.",
+  "commands.fpsm.modify.matchEndTeleportPoint.success" : "Successfully set the end of the game teleport point '%1$s'",
+  "commands.fpsm.modify.matchEndTeleportPoint.failed" : "Failed to set the end of the game teleport point",
   "key.fpsm.custom.tab.on": "Custom Tab On",
   "key.fpsm.custom.tab.off": "Custom Tab Off",
   "key.fpsm.custom.tab.desc": "Switch Custom Tab",
@@ -76,5 +78,17 @@
   "fpsm.map.cs.pause.now" : "The current game is pause state",
   "fpsm.map.cs.pause.done" : "The pause time has been exhausted",
   "fpsm.item.c4.dismantled" : "The bomb has been dismantled",
-  "fpsm.item.c4.planted" : "The bomb has been planted"
+  "fpsm.item.c4.planted" : "The bomb has been planted",
+  "fpsm.map.vote.timer" : "vote time out : %1$s",
+  "fpsm.map.vote.agree" : "%1$s agree.",
+  "fpsm.map.vote.disagree" : "%1$s disagree.",
+  "fpsm.map.vote.message" : "%1$s initiated a map %2$s vote.",
+  "fpsm.map.vote.success" : "The %1$s vote was successful, the map will be execute some logic.",
+  "fpsm.map.vote.fail" : "The %1$s vote failed, the map will not be changed.",
+  "fpsm.cs.overtime" : "Overtime Game",
+  "fpsm.cs.unpause" : "Unpause Game",
+  "fpsm.cs.reset" : "Reset Game",
+  "fpsm.cs.start": "Start Game",
+  "fpsm.map.vote.fail.alreadyHasVote" : "This map already has %1$s vote",
+  "fpsm.map.vote.help" : "You can type .a or .da in the chat box to agree or disagree with the vote."
 }
