--- a/src/main/resources/assets/fpsmatch/lang/zh_cn.json
+++ b/src/main/resources/assets/fpsmatch/lang/zh_cn.json
@@ -1,21 +1,21 @@
 {
-  "commands.fpsm.debug.start.success": "地图“%1$s”的游戏已开始。",
-  "commands.fpsm.debug.reset.success": "地图“%1$s”的游戏已重置。",
-  "commands.fpsm.debug.newround.success": "地图“%1$s”开始了新的一轮。",
-  "commands.fpsm.debug.cleanup.success": "地图“%1$s”已被清理。",
-  "commands.fpsm.create.success": "地图“%1$s”创建成功。",
-  "commands.fpsm.team.join.success": "%1$s 加入了 %2$s 队伍。",
-  "commands.fpsm.team.join.failure": "%1$s 队伍已满。",
-  "commands.fpsm.team.leave.success": "%1$s 离开了队伍。",
-  "commands.fpsm.team.invalidAction": "指定了无效的队伍操作。",
-  "commands.fpsm.team.notFound": "队伍未找到。",
-  "commands.fpsm.map.notFound": "地图未找到。",
+  "commands.fpsm.debug.start.success": "地图“%1$s”的游戏已开始",
+  "commands.fpsm.debug.reset.success": "地图“%1$s”的游戏已重置",
+  "commands.fpsm.debug.newround.success": "地图“%1$s”开始了新的一轮",
+  "commands.fpsm.debug.cleanup.success": "地图“%1$s”已被清理",
+  "commands.fpsm.create.success": "地图“%1$s”创建成功",
+  "commands.fpsm.team.join.success": "%1$s 加入了 %2$s 队伍",
+  "commands.fpsm.team.join.failure": "%1$s 队伍已满",
+  "commands.fpsm.team.leave.success": "%1$s 离开了队伍",
+  "commands.fpsm.team.invalidAction": "指定了无效的队伍操作",
+  "commands.fpsm.team.notFound": "队伍未找到",
+  "commands.fpsm.map.notFound": "地图未找到",
   "commands.fpsm.modify.bombarea.success": "添加爆破区域成功",
   "commands.fpsm.modify.bombarea.failed": "添加爆破区域失败",
-  "commands.fpsm.modify.spawn.add.success": "为 %1$s 队伍添加了出生点。",
-  "commands.fpsm.modify.spawn.clear.success": "清除了 %1$s 队伍的所有出生点。",
-  "commands.fpsm.modify.spawn.clearall.success": "清除了所有出生点。",
-  "commands.fpsm.modify.spawn.invalidAction": "指定了无效的出生点操作。",
+  "commands.fpsm.modify.spawn.add.success": "为 %1$s 队伍添加了出生点",
+  "commands.fpsm.modify.spawn.clear.success": "清除了 %1$s 队伍的所有出生点",
+  "commands.fpsm.modify.spawn.clearall.success": "清除了所有出生点",
+  "commands.fpsm.modify.spawn.invalidAction": "指定了无效的出生点操作",
   "fpsm.shop.title.cooldown": "剩余购买时间 %1$s",
   "fpsm.shop.title.min.money": "下一轮的最低金额 %1$s",
   "fpsm.shop.slot.empty" : "空",
@@ -28,19 +28,19 @@
   "key.fpsm.open.shop.failed.game_type.no_shop": "因为加入的游戏不支持商店，所以无法打开商店",
   "key.fpsm.dismantle_bomb.desc": "拆除炸弹",
   "commands.fpsm.team.leave.failure": "队伍未找到",
-  "commands.fpsm.shop.modify.success": "成功修改了“%1$s”商店的第%3$d个类型为%2$d的商品槽，商品为“%4$s”，价格为%5$d。",
-  "commands.fpsm.shop.modify.failed": "修改商店失败。请检查您的权限或商店是否存在。",
-  "commands.fpsm.modify.kits.add.success": "成功为队伍 '%2$s' 添加了起始装备 '%1$s'。",
-  "commands.fpsm.modify.kits.clear.success": "成功清除了队伍 '%1$s' 的起始装备。",
-  "commands.fpsm.modify.kits.clear.failed": "清除队伍 '%1$s' 的起始装备失败。",
-  "commands.fpsm.modify.kits.invalidAction": "无效的操作。",
-  "commands.fpsm.modify.kits.list.success": "队伍 '%1$s' 的起始装备列表：%2$d 件。",
+  "commands.fpsm.shop.modify.success": "成功修改了“%1$s”商店的第%3$d个类型为%2$d的商品槽，商品为“%4$s”，价格为%5$d",
+  "commands.fpsm.shop.modify.failed": "修改商店失败请检查您的权限或商店是否存在",
+  "commands.fpsm.modify.kits.add.success": "成功为队伍 '%2$s' 添加了起始装备 '%1$s'",
+  "commands.fpsm.modify.kits.clear.success": "成功清除了队伍 '%1$s' 的起始装备",
+  "commands.fpsm.modify.kits.clear.failed": "清除队伍 '%1$s' 的起始装备失败",
+  "commands.fpsm.modify.kits.invalidAction": "无效的操作",
+  "commands.fpsm.modify.kits.list.success": "队伍 '%1$s' 的起始装备列表：%2$d 件",
   "commands.fpsm.modify.matchEndTeleportPoint.success" : "成功设置了游戏结束传送点 '%1$s'",
   "commands.fpsm.modify.matchEndTeleportPoint.failed" : "设置游戏结束传送点失败",
   "key.fpsm.custom.tab.on": "自定义Tab 开启",
   "key.fpsm.custom.tab.off": "自定义Tab 关闭",
   "key.fpsm.custom.tab.desc": "切换自定义Tab",
-  "commands.fpsm.save.success": "保存成功。",
+  "commands.fpsm.save.success": "保存成功",
   "fpsm.map.cs.winner.ct.message" : "CT 阵营游戏胜利",
   "fpsm.map.cs.winner.t.message" : "T 阵营游戏胜利",
   "fpsm.map.cs.winner.ct.round.message" : "CT 阵营回合胜利",
@@ -49,8 +49,8 @@
   "fpsm.death.message.headshot": "%1$s 使用 %3$s 爆头击杀 %2$s",
   "fpsm.kill.message.teammate" : "击杀队友减少 %1$s 货币",
   "fpsm.kill.message.enemy" : "击杀敌人奖励 %1$s 货币",
-  "fpsm.screen.scale.warm" : "使用FPSMatch模组的商店前请检查 \n 设置->视频设置->界面尺寸是否为1~4之间，不能为自动。",
-  "fpsm.screen.scale.warm.tips" : "如果打开商店仍然显示异常可以尝试调整我的世界窗口大小，\n 并重新打开商店即可，后续可以恢复全屏或者其他尺寸。",
+  "fpsm.screen.scale.warm" : "使用FPSMatch模组的商店前请检查 \n 设置->视频设置->界面尺寸是否为1~4之间，不能为自动",
+  "fpsm.screen.scale.warm.tips" : "如果打开商店仍然显示异常可以尝试调整我的世界窗口大小，\n 并重新打开商店即可，后续可以恢复全屏或者其他尺寸",
   "fpsm.map.cs.team.switch" : "攻防转换",
   "fpsm.item.c4.use.fail.notInArea": "你不在指定爆破区域内！",
   "fpsm.item.c4.use.fail": "你不能放置炸弹！",
@@ -58,48 +58,48 @@
   "fpsm.item.c4.use.fail.noMap": "你不能放置炸弹，因为你还没有加入爆破模式地图！",
   "fpsm.item.c4.use.fail.map.notStart": "你不能放置炸弹，因为游戏尚未开始！",
   "fpsm.item.c4.use.fail.team.notInTeam": "你不能放置炸弹，因为你还没有加入队伍！",
-  "fpsm.login.message.closeable" : "上述信息可在FPSMatch Config中关闭。",
-  "commands.fpsm.sync.success": "同步操作成功完成。",
-  "commands.fpsm.shop.slot.modify.group.success": "成功修改了商店类型%1$s的第%2$d个插槽的组ID为%3$d。",
-  "commands.fpsm.shop.slot.modify.group.fail": "修改地图%1$s的组ID失败。",
-  "commands.fpsm.shop.slot.listener.remove.success": "成功移除了监听模块%1$s。",
-  "commands.fpsm.shop.slot.listener.remove.fail": "移除监听模块%1$s失败。",
-  "commands.fpsm.listener.add.success": "成功添加了监听模块%1$s。",
-  "commands.fpsm.listener.add.fail": "添加监听模块%1$s失败。",
-  "commands.fpsm.reload.success": "重载操作成功完成。",
-  "commands.fpsm.shop.modify.gun.success": "成功修改了%1$s商店的第%2$d个插槽，添加了'%3$s'，带有%4$d发虚拟弹药。",
-  "commands.fpsm.shop.modify.gun.failed": "商店中的枪支修改失败。请检查商店数据。",
+  "fpsm.login.message.closeable" : "上述信息可在FPSMatch Config中关闭",
+  "commands.fpsm.sync.success": "同步操作成功完成",
+  "commands.fpsm.shop.slot.modify.group.success": "成功修改了商店类型%1$s的第%2$d个插槽的组ID为%3$d",
+  "commands.fpsm.shop.slot.modify.group.fail": "修改地图%1$s的组ID失败",
+  "commands.fpsm.shop.slot.listener.remove.success": "成功移除了监听模块%1$s",
+  "commands.fpsm.shop.slot.listener.remove.fail": "移除监听模块%1$s失败",
+  "commands.fpsm.listener.add.success": "成功添加了监听模块%1$s",
+  "commands.fpsm.listener.add.fail": "添加监听模块%1$s失败",
+  "commands.fpsm.reload.success": "重载操作成功完成",
+  "commands.fpsm.shop.modify.gun.success": "成功修改了%1$s商店的第%2$d个插槽，添加了'%3$s'，带有%4$d发虚拟弹药",
+  "commands.fpsm.shop.modify.gun.failed": "商店中的枪支修改失败请检查商店数据",
   "item.fpsmatch.c4": "C4",
   "item.fpsmatch.smoke_shell" : "烟雾弹",
   "fpsm.map.cs.wip.fail" : "这个功能尚未实现，请等待后续版本更新！",
   "fpsm.map.cs.pause.fail" : "游戏尚未开始，或已用尽暂停次数，或已处于暂停状态！",
   "fpsm.map.cs.pause.nextRound.success" : "暂停将于下一回合生效！",
-  "fpsm.map.cs.pause.success" : "当前游戏被设置为暂停状态。",
+  "fpsm.map.cs.pause.success" : "当前游戏被设置为暂停状态",
   "fpsm.map.cs.pause.now" : "当前游戏已被暂停",
-  "fpsm.map.cs.pause.done" : "暂停时间已经耗尽。",
-  "fpsm.item.c4.dismantled" : "炸弹已经被拆除。",
-  "fpsm.item.c4.planted" : "炸弹已安放。",
+  "fpsm.map.cs.pause.done" : "暂停时间已经耗尽",
+  "fpsm.item.c4.dismantled" : "炸弹已经被拆除",
+  "fpsm.item.c4.planted" : "炸弹已安放",
   "fpsm.map.vote.timer" : "投票剩余时间 : %1$s",
-  "fpsm.map.vote.agree" : "%1$s 同意。",
-  "fpsm.map.vote.disagree" : "%1$s 不同意。",
-  "fpsm.map.vote.message" : "%1$s 发起了 %2$s 投票。",
-  "fpsm.map.vote.success" : "%1$s 投票的结果成功检定，当前地图将执行相关逻辑。",
-  "fpsm.map.vote.fail" : "%1$s 投票的结果检定失败，当前地图什么都没有发生。",
+  "fpsm.map.vote.agree" : "%1$s 同意",
+  "fpsm.map.vote.disagree" : "%1$s 不同意",
+  "fpsm.map.vote.message" : "%1$s 发起了 %2$s 投票",
+  "fpsm.map.vote.success" : "%1$s 投票的结果成功检定，当前地图将执行相关逻辑",
+  "fpsm.map.vote.fail" : "%1$s 投票的结果检定失败，当前地图什么都没有发生",
   "fpsm.cs.overtime" : "加时赛",
   "fpsm.cs.unpause" : "取消暂停",
   "fpsm.cs.reset" : "重置游戏",
   "fpsm.cs.start": "开始游戏",
   "fpsm.map.vote.fail.alreadyHasVote" : "这张地图正在进行%1$s投票",
-  "fpsm.map.vote.help" : "可以在聊天框输入.a或者.da来同意或者拒绝该投票。",
+  "fpsm.map.vote.help" : "可以在聊天框输入.a或者.da来同意或者拒绝该投票",
   "fpsm.shop.title.equipment" : "装备",
   "fpsm.shop.title.pistol" : "手枪",
   "fpsm.shop.title.mid_rank" : "中级",
   "fpsm.shop.title.rifle" : "步枪",
   "fpsm.shop.title.throwable": "投掷物",
-  "fpsm.map.cs.auto.start.message" : "游戏将于 %1$s 秒后自动开始。",
+  "fpsm.map.cs.auto.start.message" : "游戏将于 %1$s 秒后自动开始",
   "fpsm.map.cs.auto.start.title" : "%1$s 秒",
   "fpsm.map.cs.auto.start.subtitle" : "开始倒计时",
-  "fpsm.map.cs.auto.start.actionbar" : "游戏将于 %1$s 秒后自动开始。",
+  "fpsm.map.cs.auto.start.actionbar" : "游戏将于 %1$s 秒后自动开始",
   "fpsm.map.cs.auto.started" : "游戏开始！"
 
 }
