changelog：本次更新没有更改保存系统 1、C4爆炸时间45秒->40秒 2、增加拆弹器可以减少拆弹时间5秒 3、烟雾弹投掷速度增加，现在可以投掷的更远了

--- a/src/main/resources/assets/fpsmatch/lang/en_us.json
+++ b/src/main/resources/assets/fpsmatch/lang/en_us.json
@@ -102,5 +102,6 @@
   "fpsm.map.cs.auto.start.actionbar" : "Game will start in %1$s seconds",
   "fpsm.map.cs.auto.started" : "Game started!",
   "fpsm.cs.ct.living" : "CT Living: %1$s",
-  "fpsm.cs.t.living" : "T Living: %1$s"
+  "fpsm.cs.t.living" : "T Living: %1$s",
+  "item.fpsmatch.bomb_disposal_kit" : "Bomb Disposal Kit"
 }
