--- a/src/main/resources/assets/fpsmatch/lang/zh_cn.json
+++ b/src/main/resources/assets/fpsmatch/lang/zh_cn.json
@@ -90,7 +90,7 @@
   "fpsm.cs.reset" : "重置游戏",
   "fpsm.cs.start": "开始游戏",
   "fpsm.map.vote.fail.alreadyHasVote" : "这张地图正在进行%1$s投票",
-  "fpsm.map.vote.help" : "可以在聊天框输入.a 或者.da | /cs a 、 /cs da 来同意或者拒绝该投票",
+  "fpsm.map.vote.help" : "可以在聊天框输入.a 或者.da | /cs2 a 、 /cs2 da 来同意或者拒绝该投票",
   "fpsm.shop.title.equipment" : "装备",
   "fpsm.shop.title.pistol" : "手枪",
   "fpsm.shop.title.mid_rank" : "中级",
