添加了空白音效占位文件 修改了部分冗余代码 增加了切换自定义UI按键 完善了中文语言文件

--- a/src/main/resources/assets/fpsmatch/lang/en_us.json
+++ b/src/main/resources/assets/fpsmatch/lang/en_us.json
@@ -120,7 +120,9 @@
   "fpsmatch.tab.header.damage": "Damage",
   "fpsmatch.tab.header.money": "Money",
   "fpsmatch.tab.header.headshot": "Headshot Rate",
-  "key.fpsm.debug.mvp.hud.desc": "Debug Mvp Hud",
+  "key.fpsm.hud.custom.desc": "Custom Game Hud",
+  "key.fpsm.hud.custom.on": "Custom Game Hud On",
+  "key.fpsm.hud.custom.off": "Custom Game Hud Off",
   "commands.fpsm.mvp.success": "success add %2$s mvp music to %1$s players",
   "cs.game.winner.mvpNameSub": "Get Round Winner",
   "commands.fpsm.shop.modify.cost.success": "The price for slot %2$s of %1$s in the store has been changed to %3$s",
